# clear-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TECH_SPEC.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  DataMinr.md  IOM-DTMServiceAPI-V3.json  PIPELINE_INSIGHTS_PROPOSAL.md  PRD.md  gdacs-swagger.json
scripts/: backfill_admin_geometries_sync.py  backfill_iom_dtm.py  backfill_location_pcodes.py  backfill_location_population.py  backfill_missing_admin_locations.py  find_duplicate_pcodes.py  test_insights.py  upload_population_tiff.py
src/: api.py  celery_app.py  config.py  logging_setup.py
src/clients/: acled.py  claude.py  dataminr.py  gdacs.py  graphql.py  insights.py  iom_dtm.py
src/data/: acled_event_type_stats.json
src/models/: clear.py  dataminr.py  gdacs.py
src/prompts/: assess.py  classify.py  crisis.py  group.py  rewrite.py  situation.py
src/services/: admin_resolver.py  alert.py  classifier_singleton.py  event.py  event_categories.json  event_classifier.py  event_grouping_v2.py  event_type_stats.py  geo.py  local_classify.py  location.py  population.py  redis_lock.py  signal.py
src/tasks/: archive.py  crisis.py  dtm.py  geometries.py  notify.py  poll.py  poll_acled.py  poll_gdacs.py  population.py  process.py  situation.py
