[project]
name = "clear-pipeline"
version = "0.1.0"
description = "CLEAR data ingestion pipeline — Dataminr signals → events → alerts"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
    "rasterio>=1.3",
    "numpy>=1.26",
    "shapely>=2.0",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
